## Process this file with automake to produce Makefile.in

eeincdir = $(includedir)/libee
eeinc_HEADERS = \
		libee.h \
		ctx.h \
		event.h \
		fieldbucket.h \
		fieldtype.h \
		fieldset.h \
		namelist.h \
		field.h \
		obj.h \
		parser.h \
		internal.h \
		int.h \
		primitivetype.h \
		apache.h \
		tagbucket.h \
		tag.h \
		tagset.h \
		timestamp.h \
		value.h \
		valnode.h \
		valuetype.h

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(eeincdir)

EXTRA_DIST = 

